--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/ms-email
 spring.datasource.username=postgres
-spring.datasource.password=a10b20c30
+spring.datasource.password=banco123
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
